<resources>
    <string name="app_name">BonnBike</string>
    <string name="app_version">1.0</string>
    <string name="copyright">\u00A9 2019 Krisztian Cseh</string>
    <string name="app_data_source">Quelle der Daten: Nextbike GmbH veröffentlicht über https://opendata.bonn.de. Alle Angaben ohne Gewähr.</string>
    <string name="app_data_disclaimer">Alle in dieser App dargestellten Daten können auch über die Website www.nextbike.de abgerufen werden. \n Weder die App noch der Uhrheber dieser App können für die Korrektheit der Daten garantieren, \n noch stehen in Verbindung mit oder werden unterstützt durch Nextbike GmbH.</string>
    <string name="no_internet_alert_DE">Überprüfen Sie das Interneterbindung und versuchen Sie es erneut.</string>
    <string name="no_internet_alert_DE_title">Keine Internetverbindung!</string>
    <string name="general_error_title">Fehler!</string>
    <string name="general_error">Ein Fehler ist aufgetreten, bitte versuchen Sie es erneut,</string>
    <string name="location_acces_message">Um diese App benutzen zu können, benötigen wir Zugang zu dem Standort Ihres Gerätes</string>
    <string name="api_request_string_bikes">https://api.nextbike.net/maps/nextbike-live.json?city=547</string>
    <string name="api_request_string_service_area">https://iframe.nextbike.net/4com/map/?t=fz&amp;domain=bf</string>
    <string name="custom_info_window_bike_name_title">Fahrradnummer:</string>
    <string name="custom_info_window_rack_available_bike_title">Verfügbare Fahrräder:\u0020</string>
    <string name="datenschutz_button">Datenschutzerklärung</string>
    <string name="impressum_button">Impressum</string>
    <string name="impressum_text">Krisztian Cseh \nBrücker Mauspfad 609 \n51109 Köln \ncseh1717@gmail.com \n017686705030</string>
</resources>