<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_screen"
    android:background="@android:color/white">

    <ImageView
        android:contentDescription="@null"
        android:src="@drawable/ic_bonnbikelogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="20dp"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/app_version"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/impressum_button"
        android:gravity="center"
        android:text="@string/impressum_button"
        android:textColor="@color/bonnBikeColor"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/datenschutz_button"
        android:gravity="center"
        android:text="@string/datenschutz_button"
        android:textColor="@color/bonnBikeColor"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_data_source"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="8sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_data_disclaimer"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:textSize="8sp" />

</LinearLayout>
